# python-backend

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.save_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
{{cookiecutter.save_name}}/.github/: dependabot.yml
{{cookiecutter.save_name}}/docker/: compose-test.yaml
{{cookiecutter.save_name}}/{{cookiecutter.underscored}}/: config.py
{{cookiecutter.save_name}}/{{cookiecutter.underscored}}/api/v1/: __init__.py  deps.py
{{cookiecutter.save_name}}/{{cookiecutter.underscored}}/db/: __init__.py
{{cookiecutter.save_name}}/{{cookiecutter.underscored}}/utils/: logging.py
