[project]
name = "{{ cookiecutter.save_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description or "" }}"
readme = "README.md"
requires-python = ">=3.12"


[tool.uv]
dev-dependencies = [
    "argilla>=2.4.0",
    "black>=24.10.0",
    "docker>=7.1.0",
    "flake8>=7.1.1",
    "ipykernel>=6.29.5",
    "isort>=5.13.2",
    "markdown>=3.7",
    "mypy>=1.11.2",
    "pre-commit>=4.0.0",
    "pytest-mock>=3.14.0",
    "pytest-redis>=3.1.2",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "vulture>=2.13",
]

[tool.ruff]
extend-exclude = ["tests", "*.ipynb"]
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 100
indent-width = 4

[tool.ruff.lint]
extend-select = [
  'D', #pydocstyle
  'E', 'W', # pycodestyle
  'F', #pyflakes
  'UP', #pyupgrade
  "RUF",  # ruff dev's own rules
  "SIM", # pyflakes simplicity
  "C90", # more complexity rules
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.pytest.ini_options]
pythonpath = ["."]
